objects/Account_Feature__c.object
<CustomObject>
    <description>A junction object representing the connection between an Account and a Feature</description>
    <fields>
        <fullName>Account_Feature_Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique identifier for junction records</description>
        <label>Account Feature Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account that relates to a Feature</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Features_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <description>Feature that is linked to an Account</description>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipName>Account_Features_Feature</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional notes for the junction object.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Dependency</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Requested By</fullName>
                </value>
                <value>
                    <fullName>Early Adopter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feature with Accounts</label>
    <nameField>
        <displayFormat>AF-{0000000}</displayFormat>
        <label>Account Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Features with Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>